--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: 2
+version: "2"
 services:
   db:
     image: postgres:9.4.0
@@ -7,5 +7,7 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/foosball-api
+    links:
+      - db:postgres
     ports:
       - "10030:3000"
