Configure database.yml for staging and production

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,8 +82,10 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 
+staging:
+  <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
+
 production:
   <<: *default
-  database: foosball-api_production
-  username: foosball-api
-  password: <%= ENV['FOOSBALL-API_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
